# alkali-halides

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
alkali_halides/: __init__.py  attrdict.py  create_crystals.py  crystal.py  structures.py
alkali_halides/data/: calculated.csv  literature.csv  settings.csv
alkali_halides/scripts/: displace.py  filehandling.py  methods.py
alkali_halides/toolbox/: files.py
scripts/: displace.py
