[project]
name = "alkali_halides"
version = "0.1"
dependencies = [
    "numpy",
    "pymatgen",
    'importlib-metadata; python_version>"3.8"',
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"MPlib.alkali_halides" = ["data/*.csv"]

[tool.setuptools]
include-package-data = true

[project.scripts]
mplib_create_launch = "MPlib.scripts.generate_launch:main"
mplib_displace = "MPlib.scripts.displace:main"
mplib_health = "MPlib.scripts.report_health:main"

