[project]
name = "alkali_halides"
version = "0.2"
dependencies = [
    "numpy",
    "pymatgen",
    'importlib-metadata; python_version>"3.8"',
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"alkali_halides" = ["data/*.csv"]

[tool.setuptools]
include-package-data = true

[project.scripts]
mplib_displace = "alkali_halides.scripts.displace:main"

